<resources>
    <string name="app_name">Academico</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_sair">Sair</string>
    <string name="txt_login">Nome de Usuário</string>
    <string name="txt_password">Senha</string>
    <string name="login_btn">LOGIN</string>
    <string name="Cadastrar">CADASTRAR</string>
    <string name="matriculaTxt">Matrícula</string>
    <string name="fullname">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="birthDate">Data de Nascimento</string>
    <string name="title_activity_adm">AdmActivity</string>
    <string name="titulo_cadastroFinal"><html><b>Finalização de Cadastro</b></html></string>

    <string-array name="cursos">
        <item>Administração</item>
        <item>Serviço Social</item>
        <item>Psicologia</item>
    </string-array>

    <string-array name="users">
        <item>Selecione o Usuário</item>
        <item>Discente</item>
        <item>Docente</item>
    </string-array>

</resources>
