<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_logo_background"
    tools:context=".CadastroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ic_logo_background"
        tools:context=".CadastroActivity"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="196dp"
            android:layout_height="45dp"
            android:onClick="cadastrarUsuario"
            android:text="@string/Cadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.94" />

        <EditText
            android:id="@+id/txtNomeCadastro"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:backgroundTint="@color/preto"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.324" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSenhaCadastro"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:backgroundTint="@color/preto"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:textColor="#FA000000"
            android:textColorHighlight="#000000"
            android:textColorHint="@color/cinza"
            android:textColorLink="#000000"
            android:textCursorDrawable="@color/cinza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.746" />

        <Spinner
            android:id="@+id/spinnerUsers"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.831" />

        <EditText
            android:id="@+id/txtTelefoneCadastro"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:backgroundTint="@color/preto"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="number"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57" />

        <EditText
            android:id="@+id/txtNascimentoCadastro"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:backgroundTint="@color/preto"
            android:ems="10"
            android:hint="@string/birthDate"
            android:inputType="date"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.656" />

        <EditText
            android:id="@+id/txtUsernameCadastro"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:backgroundTint="@color/preto"
            android:ems="10"
            android:hint="@string/txt_login"
            android:inputType="textPersonName"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.404" />

        <EditText
            android:id="@+id/txtEmailCadastro"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="@dimen/btnHeight"
            android:backgroundTint="@color/preto"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.484" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="195dp"
            android:layout_height="158dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076"
            app:srcCompat="@mipmap/ic_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>