<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_back"
    android:backgroundTint="@color/ic_logo_background"
    tools:context="com.vochora.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@mipmap/ic_logo" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:onClick="logarUsuario"
        android:text="@string/login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788" />

    <Button
        android:id="@+id/cadastrarBtn"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:onClick="telaCadastro"
        android:text="@string/Cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.315" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/preto"
        android:fontFamily="sans-serif"
        android:hint="E-mail cadastrado"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="@color/cinza"
        android:textColorLink="@color/cinza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtSenhaLogin"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:backgroundTint="@color/preto"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textColor="#FA000000"
        android:textColorHighlight="#000000"
        android:textColorHint="@color/cinza"
        android:textColorLink="#000000"
        android:textCursorDrawable="@color/cinza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <Switch
        android:id="@+id/switchUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Docente"
        android:textColorHighlight="@color/cor_back"
        android:textColorLink="@color/preto"
        android:textCursorDrawable="@color/cor_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

</androidx.constraintlayout.widget.ConstraintLayout>